[gd_scene load_steps=13 format=2]

[ext_resource path="res://environment/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://Interface/UI.gd" type="Script" id=5]
[ext_resource path="res://Interface/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 384 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.882353, 0.0431373, 0.0431373, 1 )
border_color = Color( 0.882353, 0.0431373, 0.0431373, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 480.723, 535.731 )

[node name="LeftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionLeft" type="CollisionShape2D" parent="LeftBoundary"]
position = Vector2( -32, 384 )
shape = SubResource( 1 )

[node name="CollisionRight" type="CollisionShape2D" parent="LeftBoundary"]
position = Vector2( 1056, 384 )
shape = SubResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 768, -64 )
z_as_relative = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 608.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/Control"]
margin_left = 32.0
margin_top = 32.0
margin_right = 112.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="ProgressBar" parent="CanvasLayer/Control"]
modulate = Color( 0.882353, 0.0431373, 0.0431373, 1 )
self_modulate = Color( 0.882353, 0.0431373, 0.0431373, 1 )
light_mask = 1048575
margin_left = 850.0
margin_top = 32.0
margin_right = 996.0
margin_bottom = 64.0
custom_styles/fg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndGame" type="Label" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -40.0
margin_right = 320.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
text = "End Game"
align = 1

[node name="RestartGame" type="Label" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 6 )
text = "Press R to Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ended_game" from="Player" to="CanvasLayer/Control" method="_on_Player_ended_game"]
[connection signal="lost_health" from="Player" to="CanvasLayer/Control" method="_on_Player_lost_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
